--- a/precis.css
+++ b/precis.css
@@ -85,11 +85,12 @@ span.disable-sortable { display: none; }
 
 span.action:hover  { background-color: #666; color: #fff; cursor: pointer; }
 span.delete:hover { background-color: #C00; }
-span.element-select:hover { cursor: default; }
+.element-select:hover { cursor: default; }
 span.disable-sortable { color: #F60; background-color: #fff; }
 span.disable-sortable:hover { background-color: #F60; color: #fff; }
 span.processing { background-color: #FF0 !important; color: #666 !important; }
 span.success { background-color: #2FBE35; color: #fff !important; }
+span.error { background-color: #C00;color: #fff !important; }
 
 .container > * { cursor: pointer; }
 .precis-disabled .ui-sortable > * { cursor: move; }
@@ -130,13 +131,13 @@ span.delete:hover  { background-color: #666; color: #fff; cursor: pointer; }
 span.delete:hover { background-color: #C00; }
 span.change:hover { cursor: default; }
 
-span.element-select {
+.element-select {
 	position: relative;
 }
 
 span.tip { font-style: italic; }
 
-span.element-select div {
+.element-select div {
 	display: none;
 	position: absolute;
 	left: 0;
@@ -145,7 +146,7 @@ span.element-select div {
   opacity: .85; */
 }
 
-span.element-select:hover div {
+.element-select:hover div {
 	display: block;
 	width: 140px;
 }
@@ -153,7 +154,7 @@ span.element-select:hover div {
 span.disabled, span.disabled:hover { background-color: Transparent; color: #454545; text-decoration: line-through;  }
 span.disabled:hover div { display: none; }
 
-span.element-select ul {
+.element-select ul {
   margin: 0;
   margin-top: 15px;
 	border-radius: 5px;
@@ -167,14 +168,14 @@ span.element-select ul {
     -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.6);
 }
 
-span.element-select ul li {
+.element-select ul li {
 	display: block;
   margin: 0;
 	letter-spacing: 0;
 	text-transform: none;
 }
 
-span.element-select ul li  {
+.element-select ul li  {
   color: #333;
 	display: block;
 	padding: 5px 8px;
@@ -182,7 +183,7 @@ span.element-select ul li  {
 	line-height: 1.1;
 }
 
-span.element-select ul li span {
+.element-select ul li span {
   text-transform: lowercase;
   font-variant: small-caps;
   letter-spacing: 1px;
@@ -191,28 +192,28 @@ span.element-select ul li span {
   display:inline;
 }
 
-span.element-select ul li em {
+.element-select ul li em {
   font-style: normal;
   display: inline-block; width: 2em;
 }
 
-span.element-select ul li:first-child {
+.element-select ul li:first-child {
 	border: none;
 }
 
-span.element-select ul li:hover {
+.element-select ul li:hover {
 	background: #008df5;
 	color: #fff;
 	text-decoration: none;
 	text-shadow: .8px .8px .5px #00406f;
 }
 
-span.element-select ul li:hover span {
+.element-select ul li:hover span {
 	color: #055a9b; color: #044475;
 	text-shadow: .8px .8px .5px #74b9e8;
 }
 
-span.element-select ul li:first-child {
+.element-select ul li:first-child {
 	border-top-left-radius: 4px;
 	-o-border-top-left-radius: 4px;
 	-moz-border-radius-topleft: 4px;
@@ -223,7 +224,7 @@ span.element-select ul li:first-child {
 	-webkit-border-top-right-radius: 4px;
 }
 
-span.element-select ul li:last-child {
+.element-select ul li:last-child {
 	border-bottom-left-radius: 4px;
 	-o-border-bottom-left-radius: 4px;
 	-moz-border-radius-bottomleft: 4px;
@@ -233,3 +234,42 @@ span.element-select ul li:last-child {
 	-moz-border-radius-bottomright: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 }
+
+#twitter-control { position: relative; }
+#twitter-control .element-select {
+	position: absolute;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	filter: alpha(opacity=0); opacity: 0;
+}
+#twitter-control:hover > * {
+	filter: alpha(opacity=25); opacity: .25;
+}
+#twitter-control:hover .element-select {
+	filter: alpha(opacity=100); opacity: 1;
+}
+#twitter-control .element-select div {
+	position: absolute;
+	top: 25%; left: 25%;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 10px;
+	cursor: pointer;
+}
+#twitter-control em {
+  text-align: center;
+}
+
+.image { position: relative; width: 500px; }
+.image p {
+  filter: alpha(opacity=0); opacity: 0; 
+  position: absolute;
+	top: 0; left: 0;
+	width: 100%; height: 100%;
+	text-align: center;
+	padding-top: 3em;
+}
+.image:hover img {
+  filter: alpha(opacity=25); opacity: .25;
+}
+.image:hover p { 	filter: alpha(opacity=100); opacity: 1; }
+.image .container span { width: 100px; display: inline-block; text-align: left; }
