--- a/precis.css
+++ b/precis.css
@@ -237,6 +237,7 @@ span.disabled:hover div { display: none; }
 
 #twitter-control { position: relative; }
 #twitter-control .element-select {
+  font-size: 10px;
 	position: absolute;
 	top: 0; left: 0;
 	width: 100%; height: 100%;
@@ -246,7 +247,7 @@ span.disabled:hover div { display: none; }
 	filter: alpha(opacity=25); opacity: .25;
 }
 #twitter-control:hover .element-select {
-	filter: alpha(opacity=100); opacity: 1;
+	filter: alpha(opacity=90); opacity: .9;
 }
 #twitter-control .element-select div {
 	position: absolute;
@@ -264,7 +265,7 @@ span.disabled:hover div { display: none; }
   filter: alpha(opacity=0); opacity: 0; 
   position: absolute;
 	top: 0; left: 0;
-	width: 100%; height: 100%;
+	width: 100%;
 	text-align: center;
 	padding-top: 3em;
 }
@@ -273,3 +274,7 @@ span.disabled:hover div { display: none; }
 }
 .image:hover p { 	filter: alpha(opacity=100); opacity: 1; }
 .image .container span { width: 100px; display: inline-block; text-align: left; }
+
+/* at bottom to override other styles */
+.loading img,  #twitter-control.loading > * { 	filter: alpha(opacity=15) !important; opacity: .15 !important; }
+.loading .element-select, .loading .prompt { display: none; }
